--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ li {
 .logo {
   font-size: 24px;
   color: #f9faf8;
-  flex: 1;
   margin-top: 30px;
+  width: 100%;
+  align-items: center;
 }
 
 button {
@@ -56,8 +57,9 @@ ul {
   list-style: none;
   display: flex;
   justify-content: space-around;
-  flex: 1;
+  align-items: center;
   margin-top: 25px;
+  width: 100%;
 }
 
 .link-one {
